--- a/STM32code/Delta_Robot_v2.ioc
+++ b/STM32code/Delta_Robot_v2.ioc
@@ -88,8 +88,8 @@ Mcu.PinsNb=47
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H533RETx
-MxCube.Version=6.12.0
-MxDb.Version=DB.6.0.120
+MxCube.Version=6.12.1
+MxDb.Version=DB.6.0.121
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
@@ -118,22 +118,32 @@ PA12.Mode=Device
 PA12.Signal=USB_DP
 PA2.Locked=true
 PA3.Locked=true
+PA5.GPIOParameters=GPIO_PuPd
+PA5.GPIO_PuPd=GPIO_NOPULL
 PA5.Locked=true
 PA5.Mode=Full_Duplex_Master
 PA5.Signal=SPI1_SCK
+PA6.GPIOParameters=GPIO_PuPd
+PA6.GPIO_PuPd=GPIO_PULLUP
 PA6.Locked=true
 PA6.Mode=Full_Duplex_Master
 PA6.Signal=SPI1_MISO
+PA7.GPIOParameters=GPIO_PuPd
+PA7.GPIO_PuPd=GPIO_NOPULL
 PA7.Locked=true
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
+PA8.GPIOParameters=PinState
 PA8.Locked=true
+PA8.PinState=GPIO_PIN_SET
 PA8.Signal=GPIO_Output
 PB0.Locked=true
 PB0.Signal=GPIO_Output
 PB1.Locked=true
 PB1.Signal=S_TIM3_CH4
+PB10.GPIOParameters=PinState
 PB10.Locked=true
+PB10.PinState=GPIO_PIN_SET
 PB10.Signal=GPIO_Output
 PB12.Locked=true
 PB12.Mode=Asynchronous
@@ -147,7 +157,9 @@ PB14.Signal=USART1_TX
 PB15.Locked=true
 PB15.Mode=Asynchronous
 PB15.Signal=USART1_RX
+PB5.GPIOParameters=PinState
 PB5.Locked=true
+PB5.PinState=GPIO_PIN_SET
 PB5.Signal=GPIO_Output
 PB6.Locked=true
 PB6.Mode=I2C
@@ -305,10 +317,14 @@ SH.S_TIM4_CH4.0=TIM4_CH4
 SH.S_TIM4_CH4.ConfNb=1
 SH.S_TIM5_CH1.0=TIM5_CH1,Output Compare1 CH1
 SH.S_TIM5_CH1.ConfNb=1
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
-SPI1.CalculateBaudRate=31.25 MBits/s
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_32
+SPI1.CLKPhase=SPI_PHASE_2EDGE
+SPI1.CLKPolarity=SPI_POLARITY_LOW
+SPI1.CalculateBaudRate=1.953125 MBits/s
+SPI1.DataSize=SPI_DATASIZE_16BIT
 SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
+SPI1.FirstBit=SPI_FIRSTBIT_MSB
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,DataSize,CLKPolarity,CLKPhase,FirstBit
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
 TIM15.IPParameters=PeriodNoDither,Prescaler
@@ -334,7 +350,8 @@ TIM5.IPParameters=AutoReloadPreload,PeriodNoDither,Prescaler,Channel-Output Comp
 TIM5.OCMode_1=TIM_OCMODE_TOGGLE
 TIM5.PeriodNoDither=0x1
 TIM5.Prescaler=249
-USART1.IPParameters=VirtualMode-Asynchronous
+USART1.IPParameters=VirtualMode-Asynchronous,Parity
+USART1.Parity=PARITY_NONE
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 USART6.IPParameters=VirtualMode
 USART6.VirtualMode=VM_ASYNC
